--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,28 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
+    ext.kotlin_version = '1.6.0'
+    ext.nav_version = "2.3.5"
+    ext.lifecycle_version = "2.3.1"
+    ext.room_version = "2.3.0"
+    ext.coroutines_version = "1.5.1"
+    ext.hilt_version = '2.38.1'
+    ext.fragment_version = "1.3.6"
+    ext.androidXTestCoreVersion = "1.4.0"
+    ext.mockitoVersion = "3.9.0"
+    ext.androidx_test_espresso = "3.4.0"
+
+
     repositories {
         google()
         mavenCentral()
     }
+
     dependencies {
         classpath "com.android.tools.build:gradle:7.0.1"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.30"
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
 
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
     }
 }
 
