--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,8 @@ buildscript {
     ext.mockitoVersion = "3.9.0"
     ext.androidx_test_espresso = "3.4.0"
     ext.retrofit_version = '2.9.0'
+    ext.paging_version = '3.0.1'
+    ext.glide_version = '4.12.0'
 
     repositories {
         google()
