--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,13 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            buildConfigField "String", "TOKEN", RELEASE_TOKEN
+        }
+        debug {
+            buildConfigField "String", "TOKEN", DEBUG_TOKEN
+        }
+        staging {
+            buildConfigField "String", "TOKEN", STAGING_TOKEN
         }
     }
     compileOptions {
