--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,7 +16,7 @@ android {
         versionCode 100
         versionName "1.0.0"
 
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "com.islam.shutterstock.utils.CustomTestRunner"
     }
 
     buildTypes {
@@ -81,4 +81,11 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     // Espresso
     androidTestImplementation "androidx.test.espresso:espresso-core:$androidx_test_espresso"
+    // Hilt testing dependency
+    androidTestImplementation "com.google.dagger:hilt-android-testing:$hilt_version"
+    // Make Hilt generate code in the androidTest folder
+    kaptAndroidTest "com.google.dagger:hilt-android-compiler:$hilt_version"
+
+    debugImplementation "androidx.fragment:fragment-testing:$fragment_version"
+    debugImplementation "androidx.test:core:$androidXTestCoreVersion"
 }
