--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,6 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'kotlin-kapt'
-    id 'dagger.hilt.android.plugin'
     id 'androidx.navigation.safeargs.kotlin'
 }
 
@@ -16,7 +15,7 @@ android {
         versionCode 100
         versionName "1.0.0"
 
-        testInstrumentationRunner "com.islam.shutterstock.utils.CustomTestRunner"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
     buildTypes {
@@ -49,7 +48,7 @@ android {
 
 dependencies {
 
-    implementation "androidx.core:core-ktx:$kotlin_version"
+    implementation "androidx.core:core-ktx:1.6.0"
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
@@ -64,9 +63,9 @@ dependencies {
     implementation "io.reactivex.rxjava3:rxjava:3.1.1"
     implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
     implementation "com.squareup.retrofit2:adapter-rxjava3:2.9.0"
-    // Hilt
-    implementation "com.google.dagger:hilt-android:$hilt_version"
-    kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
+    // Dagger2
+    implementation "com.google.dagger:dagger:$dagger_version"
+    kapt "com.google.dagger:dagger-compiler:$dagger_version"
     // Retrofit
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
@@ -86,10 +85,6 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     // Espresso
     androidTestImplementation "androidx.test.espresso:espresso-core:$androidx_test_espresso"
-    // Hilt testing dependency
-    androidTestImplementation "com.google.dagger:hilt-android-testing:$hilt_version"
-    // Make Hilt generate code in the androidTest folder
-    kaptAndroidTest "com.google.dagger:hilt-android-compiler:$hilt_version"
 
     debugImplementation "androidx.fragment:fragment-testing:$fragment_version"
     debugImplementation "androidx.test:core:$androidXTestCoreVersion"
