--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,10 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = '1.6.0'
+    ext.kotlin_version = '1.4.32'
     ext.nav_version = "2.3.5"
     ext.lifecycle_version = "2.3.1"
     ext.room_version = "2.3.0"
-    ext.hilt_version = '2.38.1'
+    ext.dagger_version = "2.38.1"
     ext.fragment_version = "1.3.6"
     ext.androidXTestCoreVersion = "1.4.0"
     ext.mockitoVersion = "3.9.0"
@@ -20,8 +20,7 @@ buildscript {
 
     dependencies {
         classpath "com.android.tools.build:gradle:7.0.1"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.30"
-        classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
 
     }
