Replace Gson with Moshi converter

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,14 +62,13 @@ dependencies {
     // RxJava 3
     implementation "io.reactivex.rxjava3:rxjava:3.1.1"
     implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
-    implementation "com.squareup.retrofit2:adapter-rxjava3:2.9.0"
     // Dagger2
     implementation "com.google.dagger:dagger:$dagger_version"
     kapt "com.google.dagger:dagger-compiler:$dagger_version"
     // Retrofit
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
-    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
-    implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2'
+    implementation "com.squareup.retrofit2:converter-moshi:$retrofit_version"
+    implementation "com.squareup.retrofit2:adapter-rxjava3:$retrofit_version"
     implementation 'com.squareup.okhttp3:logging-interceptor:4.9.1'
     //Paging
     implementation "androidx.paging:paging-runtime-ktx:$paging_version"
