--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,19 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = '1.4.32'
-    ext.nav_version = "2.3.5"
-    ext.lifecycle_version = "2.3.1"
-    ext.room_version = "2.3.0"
-    ext.dagger_version = "2.38.1"
-    ext.fragment_version = "1.3.6"
-    ext.androidXTestCoreVersion = "1.4.0"
-    ext.mockitoVersion = "3.9.0"
-    ext.androidx_test_espresso = "3.4.0"
-    ext.retrofit_version = '2.9.0'
-    ext.paging_version = '3.0.1'
-    ext.glide_version = '4.12.0'
+    ext {
+        kotlin_version = '1.4.32'
+        nav_version = "2.3.5"
+        lifecycle_version = "2.3.1"
+        room_version = "2.3.0"
+        dagger_version = "2.38.1"
+        fragment_version = "1.3.6"
+        androidXTestCoreVersion = "1.4.0"
+        mockitoVersion = "3.9.0"
+        androidx_test_espresso = "3.4.0"
+        retrofit_version = '2.9.0'
+        paging_version = '3.0.1'
+        glide_version = '4.12.0'
+    }
 
     repositories {
         google()
